Switch from CSVs to MySQL-backed data storage.
Parsing CSVs was becoming too expensive. See migrate.py for a one-time migration.

--- a/private.py.sample
+++ b/private.py.sample
@@ -5,3 +5,8 @@ home = "Foo's Home"
 zones = ["Kitchen", "Bedroom"]
 
 timezone = 'Europe/Brussels'
+
+mysql_hostname = 'localhost'
+mysql_user = 'tado'
+mysql_password = 'tado_password'
+mysql_db = 'tado'
